<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/create_title_label"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="239dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/create_title_placeholder"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="43dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/create_author_label"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="101dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/authorEditText"
            android:layout_width="239dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/create_author_placeholder"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="128dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/releaseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/create_release_date_label"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/releaseDateEditText"
            android:layout_width="239dp"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/create_release_date_placeholder"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="212dp" />
    </LinearLayout>

    <Button
        android:id="@+id/createBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createBook"
        android:text="@string/create_button_label"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="297dp" />

</LinearLayout>